[gd_scene format=3 uid="uid://sr5p3lhpkk1i"]

[ext_resource type="Script" uid="uid://bhjh4a456oepe" path="res://Scripts/MenusScripts/SettingsMenu.gd" id="1_3pdib"]

[node name="SettingsMenu" type="Control" unique_id=748973714]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3pdib")

[node name="Label" type="Label" parent="." unique_id=2077508555]
layout_mode = 0
offset_left = 434.0
offset_top = 76.0
offset_right = 712.0
offset_bottom = 116.0
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1
visible_characters = 0
visible_ratio = 0.0

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=528840580]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.5
offset_top = -91.0
offset_right = 124.5
offset_bottom = 91.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ControlsButton" type="Button" parent="VBoxContainer" unique_id=1412371043]
layout_mode = 2
text = "Controls"

[node name="AudioButton" type="Button" parent="VBoxContainer" unique_id=885389645]
layout_mode = 2
text = "Audio"

[node name="OptionButton" type="OptionButton" parent="VBoxContainer" unique_id=77838157]
process_mode = 3
layout_mode = 2
alignment = 1
selected = 0
item_count = 2
popup/item_0/text = "English"
popup/item_0/id = 0
popup/item_1/text = "Russian"
popup/item_1/id = 1

[node name="BackButton" type="Button" parent="VBoxContainer" unique_id=716605722]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="VBoxContainer/ControlsButton" to="." method="_on_controls_button_pressed"]
[connection signal="pressed" from="VBoxContainer/AudioButton" to="." method="_on_audio_button_pressed"]
[connection signal="item_selected" from="VBoxContainer/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
